# Aggrigation_and_composition

./: CMakeLists.txt  README.md
Farm/: Animal.cpp  Animal.h  AnimalTest  Chicken.cpp  Chicken.h  Cow.cpp  Cow.h  Crop.cpp  Crop.h  CropTest  Farm.cpp  Farm.h  FarmDriver.cpp  FarmManagementSystem  FarmTest  Field.cpp  Field.h  FieldTest  Pig.cpp  Pig.h
Farm/data/: animals.csv  crops.csv
Farm/tests/: test_Animal.cpp  test_Crop.cpp  test_Farm.cpp  test_Field.cpp
